fix: stabilize hardening verification coverage